Simplified arc rendering options menu creation and callbacks when multiple selected tracks. Cleaned up menu.